--- a/css/style.css
+++ b/css/style.css
@@ -83,14 +83,20 @@ border-bottom: solid 6px  #4E2920;
 }
 
 .musicList ul {
-  margin: 0;
-  padding: 10px;
+  margin: 1px;
+  padding: 0;
   background: #000033;
 }
 
+.musicList h2, h3, h4{
+ padding:4px;
+ margin:0;
+}
+
 .musicList li {
+text-align:center;
   margin: 0;
-  padding: 10px 6px 0 6px;
+  padding: 2px 6px 0 6px;
   border-bottom: 1px solid lime;
   opacity: .9;
   -webkit-transition: all 0.3s ease-out;
@@ -100,18 +106,26 @@ border-bottom: solid 6px  #4E2920;
 }
 
 .musicList a {
-  display: block;
+  padding: 3px;
+  color:yellow;
   text-decoration: none;
+}
+
+
+.musicList a:hover {
+  color:yellow;
+  font-size-adjust: .5;
+  text-decoration: underline;
 }
 
 .musicList li:hover {
   background: #000045;
   color: white;
   opacity: 1;
-  -webkit-transform: scale(1.2);
-  -moz-transform: scale(1.2);
-  -o-transform: scale(1.2);
-  transform: scale(1.2);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transform: scale(1.1);
   border-radius: 8px;
 }
 
@@ -123,14 +137,6 @@ border-bottom: solid 6px  #4E2920;
   border-radius: 12px;
   margin-right: 10px;
   margin-bottom: 10px;
-}
-
-.music info {
-  color: white;
-  background: 000033;
-  display: block;
-  float: left;
-  padding-left: 120px !important;
 }
 
 .music:last-child {
