--- a/css/style.css
+++ b/css/style.css
@@ -189,9 +189,10 @@ border-bottom: solid 6px  #4E2920;
 }
 
 .musicList li {
-text-align:center;
+  font-family: Verdana;
+  text-align:center;
   margin: 0;
-  padding: 2px 6px 0 6px;
+  padding: 6px 0 15px 0; 
   border-bottom: 1px solid lime;
   opacity: .9;
   -webkit-transition: all 0.3s ease-out;
@@ -235,8 +236,9 @@ text-align:center;
 }
 
 .music:last-child {
-  border-bottom:none;
+  border-bottom: 2px solid lime;
   border-radius:0 0 20px 20px;
+  padding-bottom: 25px;
 }
 
 .musicinfo {
