--- a/partials/list.html
+++ b/partials/list.html
@@ -26,6 +26,7 @@
   
 	<ul class="musicList" ng-show="query">
 		<li ng-animate="'animate'" class="music cf" ng-repeat="item in music | filter: query | orderBy: songOrder:direction"> 
+			<img ng-src="images/{{item.source}}.jpg"></img>
 			<div class="info">
 			    <h2>Author: {{ item.author }}</h2>
 				<span>Title: <a ng-href="{{item.links}}">{{item.title}}</a></span>
