made links separate to another page

--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,13 @@ border-bottom: solid 6px  #4E2920;
   transition: all 0.2s ease-out;
 }
 
+.musicList #muLi {
+	margin:0;
+	padding:0;
+	text-decoration: none;
+	color: white;
+}
+
 .musicList a {
   padding: 3px;
   color:yellow;
