--- a/css/style.css
+++ b/css/style.css
@@ -29,10 +29,6 @@ html {
 padding: 0;
 margin:0;
   background-color: #2C5945;  
-  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#2C5945), to(#10AAC0));
-  background-image: -webkit-linear-gradient(top, #2C5945, #10AAC0); 
-  background-image: -moz-linear-gradient(top, #2C5945, #10AAC0);
-  background-image: -o-linear-gradient(top, #2C5945, #10AAC0);
   min-height: 100%;
   height: auto;
 }
@@ -46,34 +42,17 @@ margin:0;
 .heading {
 padding: 0;
 margin: 0;
-height: 65px;
+height: 95px;
 background:#921A0A;
 border-bottom: solid 6px  #4E2920;
 }
 
-
-.fillit{
-	padding: 0 40px 0 40px;
-	margin: 20px 0 0 30px;
-
-}
-
-.fillit h1,
-.fillit h2{
-  color: #F2E15F;
-  text-shadow: 2px 2px 2px #4E2920;
-}
-
-.fillit p{
-  color: #DA8920;
-}
-
-
 /* Search Styles */
 
 .search {
-  background: #063642;
-  color: #EEE8D5;
+  background: #921A0A;
+  border: 6px solid #4E2920;
+  color: #E6C300;
   width: 90%;
   min-width: 320px;
   max-width: 500px;
@@ -85,7 +64,10 @@ border-bottom: solid 6px  #4E2920;
 }
 
 .search h1 {
-  color: #EEE8D5;
+  font-family: "Calibri", sans-serif;
+  color: #E6C300;
+  font-size: 2em;
+  text-shadow: 2px 3px 2px black;
 }
 
 .btn {
@@ -101,8 +83,8 @@ border-bottom: solid 6px  #4E2920;
     cursor: pointer;
     border: 1px solid transparent;
     border-radius: 4px;
-    background: #C61C6F;
-    color: #FCF4DC;
+    background: #E6C300;
+    color: black;
     -webkit-user-select: none;
        -moz-user-select: none;
         -ms-user-select: none;
@@ -112,14 +94,17 @@ border-bottom: solid 6px  #4E2920;
 
 .btn .btn-left {
   float: left;
+
 }
 
 .btn .btn-right {
   float: right;
+  
 }
 
 .btn:hover {
-    background: #09576D;
+    background: #2C5945;
+	color: #E6C300;
 }
 
 .search label {
@@ -249,10 +234,12 @@ border-bottom: solid 6px  #4E2920;
 }
 
 .musicinfo {
+  font-family: 'Droid Sans', sans-serif; 
   font-size: 1.1em;
   line-height: 160%;
-  background: #EEE8D5;
-  color: #0F4150;
+  background: #921A0A;
+  border: 6px solid #4E2920;
+  color: #E6C300;
   width: 90%;
   min-width: 320px;
   max-width: 620px;
@@ -266,13 +253,18 @@ border-bottom: solid 6px  #4E2920;
 
 .musicinfo h1{
   font-size: 1.8em;
-  margin-bottom: 0;
+  margin-bottom: 8px;
+  text-shadow: 2px 2px 3px black;
 }
 
 .musicinfo img {
   width: 40%;
   max-width: 130px;
   border-radius: 20px;
+}
+
+.musicinfo #link{
+	color: #E6C300;
 }
 
 .music.ng-enter.ng-enter-active,
