--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ border-bottom: solid 6px  #4E2920;
   width: 100%;
   padding: 10px 0 10px 15px;
   font-size: 1rem;
-  color: #475B62;
+  color: #921A0A;
   background: rgba(255,255,255,0.4);
   border: 1px solid rgba(255,255,255,0.2);
   border-radius: 10px;
@@ -138,7 +138,7 @@ border-bottom: solid 6px  #4E2920;
   display: inline;
   padding: 10px 0 10px 15px;
   font-size: 1rem;
-  color: #475B62;
+  color: #921A0A;
   background: rgba(255,255,255,0.4);
   border: 1px solid rgba(0,0,0,0.3);
   border-radius: 10px;
@@ -150,7 +150,7 @@ border-bottom: solid 6px  #4E2920;
 
 /* MUSIC LIST */
 .musicList {
-  background: #000033;
+  background: #800000;
   color: white;
   width: 72%;
   min-width: 290px;
@@ -165,7 +165,7 @@ border-bottom: solid 6px  #4E2920;
 .musicList ul {
   margin: 1px;
   padding: 0;
-  background: #000033;
+  background: #800000;
 }
 
 .musicList h2, h3, h4{
@@ -178,7 +178,7 @@ border-bottom: solid 6px  #4E2920;
   text-align:center;
   margin: 0;
   padding: 6px 0 15px 0; 
-  border-bottom: 1px solid lime;
+  border-bottom: 1px solid ;
   opacity: .9;
   -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
@@ -207,7 +207,7 @@ border-bottom: solid 6px  #4E2920;
 }
 
 .musicList li:hover {
-  background: #000045;
+  background: #CC0000;
   color: white;
   opacity: 1;
   -webkit-transform: scale(1.1);
