--- a/partials/detailed.html
+++ b/partials/detailed.html
@@ -3,10 +3,9 @@
 	<a href="#/detailed/{{prevItem}}" class="btn btn-left">&lt;</a>
 	<a href="#/detailed/{{nextItem}}" class="btn btn-right">&gt;</a>
 	<h1>{{music[whichItem].author}}</h1>
-	<p>Go to github and get videogular up and working.</p>
 	    <div class="info">
-	    	<iframe width="600" height="345" ng-src="{{music[whichItem].links}}"></iframe>
+	    	<!--<iframe width="600" height="345" ng-src="{{music[whichItem].embed}}"></iframe>-->
 		</div>
   </div>
-  <a id="link" href="index.html">&laquo; Back to Search</a>
+  <a id="link" href="indexAng.html">&laquo; Back to Search</a>
 </section>
